Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-8361

lctl lfsck_start --all does not start lfsck on all devices

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.9.0
    • Lustre 2.8.0
    • 3
    • 9223372036854775807

      It appears that in lustre 2.8.0, the lctl lfsck_start --all command is broken:

      [root@jet1:~]# lctl lfsck_start -A
      Must specify device to start LFSCK.
      [root@jet1:~]# lctl lfsck_start --all 
      Must specify device to start LFSCK.
      

      But the man page says (in the lfsck section):

      -A, --all
      Start LFSCK on all available MDT devices.

            yong.fan nasf (Inactive)
            morrone Christopher Morrone (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: